Closed Bug 1156943 Opened 9 years ago Closed 9 years ago

Properly hook up HangMonitor for Android

Categories

(Firefox for Android Graveyard :: General, defect)

defect
Not set
normal

Tracking

(firefox40 fixed)

RESOLVED FIXED
Firefox 40
Tracking Status
firefox40 --- fixed

People

(Reporter: jchen, Assigned: jchen)

Details

Attachments

(1 file)

Right now we don't call Suspend() at all when waiting for events.
HangMonitor in turn calls BackgroundHandMonitor.
Attachment #8595538 - Flags: review?(snorp)
Comment on attachment 8595538 [details] [diff] [review]
Make proper HangMonitor calls in Android nsAppShell (v1)

Review of attachment 8595538 [details] [diff] [review]:
-----------------------------------------------------------------

Cool. I had a similar patch I wrote while you were out, but this one looks better :)
Attachment #8595538 - Flags: review?(snorp) → review+
https://hg.mozilla.org/mozilla-central/rev/f0186ec547ea
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 40
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: