Bug 1156943 - Make proper HangMonitor calls in Android nsAppShell; r=snorp